--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <div id="flip">
     <h1> 
-    <p id="">Starting Money = 100</p>
     <button id="Heads" style="height: 10em; width: 10em; font-size: large;" type="button">Heads</button>
-    <button id="Tails" style="height: 10em; width: 10em; font-size: large;"" type="button">Tails</button>
+    <button id="Tails" style="height: 10em; width: 10em; font-size: large;" type="button">Tails</button>
+    <p id="">Starting Money = 100</p>
     <p id="p1"></p>
     <p id="kasa"></p>
     </h1>
@@ -11,7 +11,7 @@
 
 <script>
 
-var money = 100
+var money = 0
 
 /* checks for a click event within the div id="flip" */
 const onClick = (event) => {
@@ -32,7 +32,7 @@ const onClick = (event) => {
       document.getElementById("kasa").innerHTML = money;
     } else {
       document.getElementById("p1").innerHTML = "You Loss";
-      money = money - 0.9
+      money = money - 1
       document.getElementById("kasa").innerHTML = money;
     }
     /* outputs the result */
