--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@ const onClick = (event) => {
     if (choice == flip) {
       document.getElementById("p1").innerHTML = "You Win";
       money = money + 0.9
+      money.toFixed(2);
       document.getElementById("kasa").innerHTML = money;
     } else {
       document.getElementById("p1").innerHTML = "You Loss";
       money = money - 1
+      money.toFixed(2);
       document.getElementById("kasa").innerHTML = money;
     }
     /* outputs the result */
