--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<div id="flip">
+<div class="row">
+  <div class="column">
+    
+    <div id="flip">
     <h1> 
     <button id="Heads" style="height: 10em; width: 10em; font-size: large;" type="button">Heads</button>
     <button id="Tails" style="height: 10em; width: 10em; font-size: large;" type="button">Tails</button>
@@ -7,7 +10,12 @@
     <p id="kasa"></p>
     </h1>
     <div id="result"></div>
+    </div>
+    
+   </div>
+  <div class="column"><iframe src="https://flipsimu.com/emb/coin?id=g6Yvx" width="100%" height="570px" scrolling="no" frameborder="0"></iframe></div>
 </div>
+
 
 <script>
 
