--- a/index.html
+++ b/index.html
@@ -1,6 +1,34 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+</style>
+</head>
+<body>
+
+<h2>Two Equal Columns</h2>
+
 <div class="row">
-  <div class="column">
-    
+  <div class="column" style="background-color:#aaa;">
     <div id="flip">
     <h1> 
     <button id="Heads" style="height: 10em; width: 10em; font-size: large;" type="button">Heads</button>
@@ -11,11 +39,14 @@
     </h1>
     <div id="result"></div>
     </div>
-    
-   </div>
+  </div>
+  <div class="column" style="background-color:#bbb;">
   <div class="column"><iframe src="https://flipsimu.com/emb/coin?id=g6Yvx" width="100%" height="570px" scrolling="no" frameborder="0"></iframe></div>
+  </div>
 </div>
 
+</body>
+</html>
 
 <script>
 
