--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-<h2>COinflip</h2>
+<h2>Coinflip</h2>
 
 <div class="row">
   <div class="column" style="background-color:#aaa;">
