--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </style>
 </head>
 <body>
-<div style="text-align:center">>
+<div style="text-align:center">
   <h2>Coinflip</h2>
   <video muted="" width="640" height="640" loop="" playsinline="" autoplay="" data-src="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/71417a465b87e51ba087209e21f720ac.mp4" data-video-small="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/8afc806e33079a06f71ca86e98a697e1.mp4" data-video-medium="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/5632f8aa3b06efc1ef7af445636bab79.mp4" data-video-large="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/71417a465b87e51ba087209e21f720ac.mp4" src="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/71417a465b87e51ba087209e21f720ac.mp4"></video>
 </div>
