--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
   box-sizing: border-box;
 }
 
-/* Create two equal columns that floats next to each other */
+/* Create three equal columns that floats next to each other */
 .column {
   float: left;
-  width: 50%;
+  width: 33.33%;
   padding: 10px;
-  height: 600px; /* Should be removed. Only for demonstration */
+  height: 300px; /* Should be removed. Only for demonstration */
 }
 
 /* Clear floats after the columns */
@@ -24,6 +21,7 @@
 </style>
 </head>
 <body>
+
 <div style="text-align:center">
   <h2>Coinflip</h2>
 </div>
@@ -41,19 +39,22 @@
     <div id="result"></div>
     </div>
   </div>
+  <div class="column" style="background-color:#bbb;">
+
   <div class="column" style="background-color:#ccc;">
   <div class="column"><video muted="" width="640" height="640" loop="" playsinline="" autoplay="" data-src="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/71417a465b87e51ba087209e21f720ac.mp4" data-video-small="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/8afc806e33079a06f71ca86e98a697e1.mp4" data-video-medium="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/5632f8aa3b06efc1ef7af445636bab79.mp4" data-video-large="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/71417a465b87e51ba087209e21f720ac.mp4" src="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/71417a465b87e51ba087209e21f720ac.mp4"></video></div>
+ 
   </div>
-  
+  <div class="column" style="background-color:#ccc;">
   
   <div class="column" style="background-color:#bbb;">
   <div class="column"><iframe src="https://flipsimu.com/emb/coin?id=g6Yvx" width="100%" height="570px" scrolling="no" frameborder="0"></iframe></div>
+
   </div>
 </div>
 
 </body>
-</html>
-
+  
 <script>
 
 var money = 0
@@ -87,3 +88,9 @@ const onClick = (event) => {
 document.querySelector('#flip').addEventListener('click', onClick);
 
 </script>
+  
+  
+  
+</html>
+
+
