--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 /* Create three equal columns that floats next to each other */
 .column {
-  float: center;
+  float: left;
   width: 33.33%;
   padding: 10px;
   height: 600px; /* Should be removed. Only for demonstration */
@@ -41,7 +41,7 @@
   </div>
   
   <div class="column" style="background-color:#bbb;">
-    <div class="column"><video muted="" width="500" height="500" loop="" playsinline="" autoplay="" data-src="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/71417a465b87e51ba087209e21f720ac.mp4" data-video-small="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/8afc806e33079a06f71ca86e98a697e1.mp4" data-video-medium="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/5632f8aa3b06efc1ef7af445636bab79.mp4" data-video-large="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/71417a465b87e51ba087209e21f720ac.mp4" src="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/71417a465b87e51ba087209e21f720ac.mp4"></video></div>
+    <div class="column"><video muted="" width="400" height="400" loop="" playsinline="" autoplay="" data-src="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/71417a465b87e51ba087209e21f720ac.mp4" data-video-small="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/8afc806e33079a06f71ca86e98a697e1.mp4" data-video-medium="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/5632f8aa3b06efc1ef7af445636bab79.mp4" data-video-large="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/71417a465b87e51ba087209e21f720ac.mp4" src="https://cdn.dribbble.com/users/104045/screenshots/14469606/media/71417a465b87e51ba087209e21f720ac.mp4"></video></div>
   </div> 
   <div class="column" style="background-color:#ccc;">
     <div class="column"><iframe src="https://flipsimu.com/emb/coin?id=g6Yvx" width="100%" height="570px" scrolling="no" frameborder="0"></iframe></div>
